# SmartCalc_2.0

./: .gitignore  CMakeLists.txt  README.md
code-samples/: exampleController.h
src/: CMakeLists.txt  Makefile  SmartCalc.pro  dvi.html  main.cpp
src/Controller/: Controller.h
src/Model/: Model.h  calculator.cc  calculator.h  validation.cc  validation.h
src/View/: View.h
src/controller/: controller.cc  controller.h
src/model/: calculator.cc  calculator.h  model.cc  model.h  validation.h
src/model/data/: data_credit.h  data_deposit.h  data_plot.h
src/model/kernel/: calculator.cc  calculator.h  calculator_credit.cc  calculator_credit.h  calculator_debit.cc  calculator_debit.h  calculator_plot.cc  calculator_plot.h  parser.cc  parser.h  validation.cc  validator.cc  validator.h
src/model/kernel/calculators/: calculator.cc  calculator.h  calculator_credit.cc  calculator_credit.h  calculator_deposit.cc  calculator_deposit.h  calculator_plot.cc  calculator_plot.h
src/tests/: CMakeLists.txt  tests.cc
src/view/: credit.cc  credit.h  debit.cc  debit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cc
src/view/credit_view/: creditview.cpp  creditview.h  creditview.ui
src/view/data/: data_credit.cc  data_credit.h  data_deposit.cc  data_deposit.h  data_plot.cc  data_plot.h
src/view/deposit_viev/: depositview.cpp  depositview.h  depositview.ui
